--- a/index.html
+++ b/index.html
@@ -12,14 +12,97 @@
 </head>
 
 <body>
-    <nav>
-
+    <nav class="bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Aspen Grove</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link" href="#music-therapy">Music Therapy</a>
+                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="#">Waitlist</a>
+                </div>
+            </div>
+        </div>
     </nav>
-    <main>
 
+    <main class="container-fluid">
+        <!--- Home --->
+        <section class="row">
+            <div class="col-12 col-md-6">
+
+            </div>
+            <div class="col-12 col-md-6">
+
+            </div>
+        </section>
+        <section class="row">
+            <div class="col-12 col-md-6">
+
+            </div>
+            <div class="col-12 col-md-6">
+
+            </div>
+        </section>
+
+        <!--- Music Therapy --->
+
+        <section class="row">
+            <div class="col-12 col-md-6">
+
+            </div>
+            <div class="col-12 col-md-6">
+
+            </div>
+        </section>
+        <section class="row">
+            <div class="col-12 col-md-6">
+
+            </div>
+            <div class="col-12 col-md-6">
+
+            </div>
+        </section>
+
+        <!--- Waitlist --->
+
+        <section class="row">
+            <div class="col-12 col-md-6">
+
+            </div>
+            <div class="col-12 col-md-6">
+
+            </div>
+        </section>
+        <section class="row">
+            <div class="col-12 col-md-6">
+
+            </div>
+            <div class="col-12 col-md-6">
+
+            </div>
+        </section>
     </main>
-    <footer>
 
+    <!-- Contact -->
+
+    <footer class="container-fluid">
+        <section class="row">
+            <div class="col-12 col-md-4">
+
+            </div>
+            <div class="col-12 col-md-4">
+
+            </div>
+            <div class="col-12 col-md-4">
+
+            </div>
+        </section>
     </footer>
     <script src="app.js"></script>
 </body>
